# terraform-provider-python

./: .gitignore  LICENSE  README.md  pyproject.toml  renovate.json  terraform_provider_python.py
protos/: post_gen.py  protoc.sh
scripts/: build_darwin.zsh  tf_basic.zsh
src/terraform_provider_python/: __main__.py  mtls.py  provider.py
src/terraform_provider_python/tfplugin/: tfplugin_pb2.py  tfplugin_pb2.pyi  tfplugin_pb2_grpc.py
terraform/basic/: main.tf
